--- a/test.html
+++ b/test.html
@@ -451,6 +451,8 @@
 
   <footer>
     <p>© 2025 - موقع تعلم اليابانية مع سمير</p>
+    <p>@learn japanise with samir</p>
   </footer>
 </body>
 </html>
+
