--- a/test.html
+++ b/test.html
@@ -427,7 +427,8 @@
     <div class="lesson">
       <h3>الهيراغانا - الحروف اليابانية</h3>
       <p>الهيراغانا هي الأبجدية الأساسية في اللغة اليابانية. تتكوّن من 46 حرفًا أساسيًا.</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Table_hiragana.svg" alt="جدول الهيراغانا">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaVIVl2X5SO5wI4XOjuls4eS05D9YSeHUv_A&s" widht=100px ="جدول الهيراغانا">
+      
     </div>
     <div class="lesson">
       <h3>الثقافة اليابانية</h3>
@@ -455,4 +456,5 @@
   </footer>
 </body>
 </html>
+
 
